--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "10.4.14",
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.7.0",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
+    "tailwindcss": "^3.3.2"
   }
 }
